165 - fixed code smells